[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
jupyterlab = "^2.2.0"
sklearn = "^0.0"
keras = "^2.4.3"
tensorflow = "^2.2.0"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
